[#1] fixed layout - all episode bars are visible
Former-commit-id: bc6ff3f776f6c8518cfe68aaa61ad4488c33aef4

--- a/client-code/src/app/dashboard/episodes/episode-app/episode-app.component.less
+++ b/client-code/src/app/dashboard/episodes/episode-app/episode-app.component.less
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     flex-direction: row;
-    width: 3000px;
+    width: auto;
     overflow-x: scroll;
 
     .episodeDiv {
